--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -32,6 +32,7 @@ RUN apt-get update && apt-get upgrade -y  && apt-get install -y \
  vim \
  nano \
  openssh-client \
+ procps \
  man
 
 ENV LC_ALL=fr_FR.UTF-8
